unpackaged/main/default/objects/GT_Reg_Attend_Only__c/GT_Reg_Attend_Only__c.object-meta.xml
<CustomObject>
    <description>This will be the Registration/Attend Only object for all accounts in Generic Template</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>