unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/CC_Project_Manager_Phone_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>CC_Project_Manager_Phone_CrownCastle__c</fullName>
    <label>CC Project Manager Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>