unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Cloned__c.field-meta.xml
<CustomField>
    <fullName>Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>