unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>