unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sean Nagle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>