unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amy Ziccarelli</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Jessica Bodner</fullName>
            </value>
            <value>
                <fullName>Michael Ewell</fullName>
            </value>
            <value>
                <fullName>Stephanie Specht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>