unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_AE_Phone__c.field-meta.xml
<CustomField>
    <fullName>GES_AE_Phone__c</fullName>
    <label>GES AE Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>