unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_AM_Phone__c.field-meta.xml
<CustomField>
    <fullName>GES_AM_Phone__c</fullName>
    <label>GES AM Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>