unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_AM_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>GES_AM_Phone_Auto__c</fullName>
    <formula>IF((TEXT(GES_Account_Manager__c) == &quot;Jessica Bodner&quot;),&quot;859-283-8737&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Stephanie Specht&quot;),&quot;412-208-2253&quot;, 
IF((TEXT(GES_Account_Manager__c) == &quot;Jamie Brosmore&quot;),&quot;859-283-8702&quot;, 
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AM Phone</label>
    <type>Text</type>
</CustomField>