unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GES Connect Event</label>
    <referenceTo>GT_Event__c</referenceTo>
    <relationshipName>Registration_Attend_Only</relationshipName>
    <type>Lookup</type>
</CustomField>