unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/GES_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager__c</fullName>
    <label>GES Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andy Jones</fullName>
            </value>
            <value>
                <fullName>Andy Valentine</fullName>
            </value>
            <value>
                <fullName>Margaret Zajda</fullName>
            </value>
            <value>
                <fullName>Paul Readman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>