unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Names_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Attendees__c</fullName>
    <label>Names of Attendees</label>
    <type>TextArea</type>
</CustomField>