unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Number_of_Attendees_CrownCastle2__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees_CrownCastle2__c</fullName>
    <label>Number of Attendees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>