unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/of_Complimentary_Conference_Passes__c.field-meta.xml
<CustomField>
    <fullName>of_Complimentary_Conference_Passes__c</fullName>
    <label># of Complimentary Conference Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>