unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Project_Manager_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_CrownCastle__c</fullName>
    <label>CC Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gina Carroll</fullName>
            </value>
            <value>
                <fullName>Juanita Timney</fullName>
            </value>
            <value>
                <fullName>Katie Lillie</fullName>
            </value>
            <value>
                <fullName>Lacey Hull</fullName>
            </value>
            <value>
                <fullName>Lisandra Fernandez</fullName>
            </value>
            <value>
                <fullName>Oswin Chackochan</fullName>
            </value>
            <value>
                <fullName>Stephanie Naida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>