unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Reg_Attend_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Attend_Name__c</fullName>
    <label>Reg or Attend Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>