unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Reg_Attend_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reg_Attend_Notes__c</fullName>
    <label>Reg or Attend Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>