unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Registered_Attendees_JSON_data__c.field-meta.xml
<CustomField>
    <fullName>Registered_Attendees_JSON_data__c</fullName>
    <label>Registered Attendees JSON data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>