unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Registration_Login__c.field-meta.xml
<CustomField>
    <fullName>Registration_Login__c</fullName>
    <label>Registration Login</label>
    <length>100</length>
    <type>Text</type>
</CustomField>