unpackaged/main/default/objects/GT_Reg_Attend_Only__c/fields/Registration_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Registration_Passcode__c</fullName>
    <label>Registration Passcode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>