unpackaged/main/default/objects/GT_Reg_Attend_Only__c/recordTypes/Registration_Attend_Only_CC.recordType-meta.xml
<RecordType>
    <fullName>Registration_Attend_Only_CC</fullName>
    <active>true</active>
    <description>Registration/Attend Only for CC Clients</description>
    <label>Registration CC</label>
</RecordType>